@@ -1,3 +1,9 @@
+2006-11-20  Joe English  <jenglish@users.sourceforge.net>
+
+	* win/ttkWinXPTheme.c: Add support for alternate/indeterminate
+	checkbutton state.  Fix various spacing parameters [#1596020, 
+	patch from Tim Baker].  Remove unused uxtheme hooks.
+
 2006-11-16  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/colors.n, doc/wm.n: Minor fixes, added See Also.
